Fixed Maven WARNING

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   </properties>
 
   <build>
-    <finalName>${artifactId}</finalName>
+    <finalName>${project.artifactId}</finalName>
 
     <plugins>
       <plugin>
